# grapherty

./: LICENSE  pyproject.toml
grapherty/: __init__.py  main.py
grapherty/definitions/: __init__.py  datum.py  graph.py  graph_context.py  input.py  resolvers.py
grapherty/properties/: __init__.py  one.py  three.py  two.py
scripts/: db.sh
tests/: test_graph.py
