[tool.poetry]
name = "grapherty"
version = "0.1.0"
description = ""
authors = ["mautriz <mauro.insacco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gremlinpython = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1.0"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
