[tool.poetry]
authors = ["mautriz <mauro.insacco@gmail.com>"]
description = ""
name = "grapherty"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0"
pytest-asyncio = "^0.18.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
